# benchmarks

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/end_to_end/e1_autonomous_quadruped/: CMakeLists.txt  package.xml
benchmarks/end_to_end/e1_autonomous_quadruped/include/: joint_trajectory_input_component.hpp  joint_trajectory_output_component.hpp  laserscan_input_component.hpp  message_publisher.hpp  message_subscriber.hpp  pointcloud_input_component.hpp  pointcloud_to_laserscan_node.hpp  robotperf_quadruped_controller.h  twist_input_component.hpp  twist_output_component.hpp
benchmarks/end_to_end/e1_autonomous_quadruped/launch/: analyze_quadruped_control.launch.py  analyze_quadruped_perception.launch.py  bringup.launch.py  gazebo_velodyne.launch.py  navigation.launch.py  robotperf_message_types.launch.py  robotperf_perception.launch.py  robotperf_quadruped_control.launch.py  robotperf_quadruped_control_e2e.launch.py  robotperf_quadruped_perception_e2e.launch.py
benchmarks/end_to_end/e1_autonomous_quadruped/src/: joint_trajectory_input_component.cpp  joint_trajectory_output_component.cpp  laserscan_input_component.cpp  laserscan_input_component_node.cpp  laserscan_output_component.cpp  laserscan_output_component_node.cpp  message_publisher.cpp  message_subscriber.cpp  pointcloud_input_component.cpp  pointcloud_input_component_node.cpp  pointcloud_to_laserscan.cpp  pointcloud_to_laserscan_node.cpp  robotperf_quadruped_controller.cpp  robotperf_quadruped_controller_node.cpp  twist_input_component.cpp
benchmarks/end_to_end/e2_navigation_messages/: CMakeLists.txt  package.xml
benchmarks/end_to_end/e2_navigation_messages/include/: message_publisher.hpp  message_subscriber.hpp
benchmarks/end_to_end/e2_navigation_messages/launch/: analyze_message_types.launch.py  robotperf_message_types.launch.py
benchmarks/end_to_end/e2_navigation_messages/src/: message_publisher.cpp  message_publisher_node.cpp  message_subscriber.cpp  message_subscriber_node.cpp
benchmarks/end_to_end/e3_custom_messages/: CMakeLists.txt  package.xml
benchmarks/end_to_end/e3_custom_messages/msg/: CustomImu.msg  CustomLaserScan.msg  CustomPointCloud2.msg  CustomPointField.msg  CustomPose.msg  CustomPoseWithCovariance.msg  CustomPoseWithCovarianceStamped.msg
benchmarks/other/benchmark_utilities/benchmark_utilities/analysis/: __init__.py
benchmarks/other/imu_pipeline/imu_transformer/: CMakeLists.txt  package.xml
benchmarks/other/tracetools_benchmark/include/tracetools_benchmark/: tp_call.h  tracetools.h
benchmarks/other/tracetools_benchmark/src/: tracetools.c
benchmarks/perception/a3_stereo_image_proc/: CMakeLists.txt
benchmarks/perception/a4_depth_image_proc/launch/: trace_a4_depth_image_proc_auto.launch.py
benchmarks/perception/a4_depth_image_proc/src/: point_cloud_output_component.cpp
benchmarks/perception/a6_depthimage_to_laserscan/src/: laserscan_output_component.cpp
benchmarks/perception/a6_imu_transformer/: CMakeLists.txt  package.xml
benchmarks/perception/a6_imu_transformer/launch/: imu_transformer_test.launch.py
benchmarks/perception/a7_pointcloud_to_laserscan/: benchmark.yaml
benchmarks/perception/a7_pointcloud_to_laserscan/launch/: analyze_a7_pointcloud_to_laserscan.launch.py  trace_a7_pointcloud_to_laserscan_auto.launch.py
benchmarks/perception/a7_pointcloud_to_laserscan/src/: pointcloud_input_component.cpp
