<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>e3_custom_messages</name>
  <version>0.0.0</version>
  <description>Custom messages for optimization.</description>
  <maintainer email="jasonjabbour@g.harvard.edu">Jason Jabbour</maintainer>
  <author email="jasonjabbour@g.harvard.edu">Jason Jabbour</author>
  <license>TODO: License declaration</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
